fixed customise structure button spacing

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -50,7 +50,7 @@ body {
   gap: 20px;
   flex-wrap: wrap;
   margin-bottom: 20px;
-
+  justify-content: space-between;
 }
 /*Ana's changes */
 .select {
